# biblical_festivals_app

./: README.md  app.py  countdown.html  festivals.yaml  pyproject.toml  styles.css  utilities.py
