[tool.poetry]
name = "hebrew-calendar"
version = "0.1.0"
description = ""
authors = ["Michael Wilt <michael.wilt@ramseysolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hdate = "^0.10.8"
streamlit = "^1.34.0"
ipykernel = "^6.29.4"
pyluach = "^2.2.0"
streamlit-js-eval = "^0.1.7"
streamlit-geolocation = "^0.0.10"
jewish = "^0.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
